--- a/collaboration/LateralOnScrollSliding/css/style.css
+++ b/collaboration/LateralOnScrollSliding/css/style.css
@@ -1,6 +1,6 @@
 h2.ss-subtitle{
-    padding: 10px 10px 40px;
-    font-size: 52px;
+    padding: 10px 50px 40px;
+    font-size: 42px;
     text-transform: uppercase;
     color: rgba(0,0,0,0.8);
 	position: relative;
@@ -207,7 +207,8 @@ h2.ss-subtitle:after{
     font-size: 28px;
     color: rgba(255,255,255,0.9);
     display: block;
-    
+    text-decoration: none;
+
 }
 .ss-container h3 a:hover{
 	color: rgba(255,255,255,1);
