--- a/collaboration/LateralOnScrollSliding/css/demo.css
+++ b/collaboration/LateralOnScrollSliding/css/demo.css
@@ -8,28 +8,29 @@ body{
     font-size: 15px;
 }
 a{
-    color: #fff;
-    text-decoration: none;
+    color: #38773a;
+    text-decoration: underline;
 }
 .container-lat{
     width: 90%;
     position: relative;
     display:block;
     margin:auto;
+
 }
 .clr{
     clear: both;
 }
 h1{
-    font-size: 37px;
-    text-align: center;
+    font-size: 40px;
+    font-family: "HelveticaNeue";
     position:relative;
     font-weight: 400;
-    padding: 30px 5px 10px 5px;
-	margin: 0px 15px;
-	color: rgba(0,0,0,0.8);
-	text-shadow: 0px 1px 1px #fff;
-	border-bottom: 1px solid rgba(17,17,22,0.1);
+    padding: 10px 5px 10px 5px;
+	margin: 0px 0px;
+	color: #fff;
+	text-shadow: 0px 1px 1px #;
+
 }
 /* Header Style */
 .header{
