--- a/collaboration/stylesheets/base.css
+++ b/collaboration/stylesheets/base.css
@@ -1,27 +1,19 @@
-/*
-* Skeleton V1.2
-* Copyright 2011, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 6/20/2012
-*/
+.logo {
+width:450px;
+display:block;
+margin:auto;
 
 
-/* Table of Content
-==================================================
-	#Reset & Basics
-	#Basic Styles
-	#Site Styles
-	#Typography
-	#Links
-	#Lists
-	#Images
-	#Buttons
-	#Forms
-	#Misc */
+}
+.streamwrap {
+margin-top: 12px;
 
+}
+.slidewrap {
+width: 500px;
 
+}
+.green {background-color: #0D4B0D; padding:12px;}
 /* #Reset & Basics (Inspired by E. Meyers)
 ================================================== */
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -34,9 +26,9 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 	body {
-		line-height: 1; }
+		line-height: 1.5;}
 	ol, ul {
-		list-style: none; }
+		list-style: circle;}
 	blockquote, q {
 		quotes: none; }
 	blockquote:before, blockquote:after,
@@ -52,7 +44,7 @@
 ================================================== */
 	body {
 		background: #fff;
-		font: 14px/21px "Verdana", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font: 17px/21px "Verdana", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #444;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
@@ -112,7 +104,7 @@
 	ol ol, ol ul { margin: 4px 0 5px 30px; font-size: 90%;  }
 	ul ul li, ul ol li,
 	ol ol li, ol ul li { margin-bottom: 6px; }
-	li { line-height: 18px; margin-bottom: 12px; }
+	li { line-height: 21px; margin-bottom: 14px; }
 	ul.large li { line-height: 21px; }
 	li p { line-height: 21px; }
 
